<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shyms.corpormobile.ui.activity.SettingActivity">


    <include layout="@layout/widget_top_bar" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/frsco_img1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        fresco:actualImageScaleType="focusCrop"
        fresco:backgroundImage="@mipmap/ic_launcher"
        fresco:roundAsCircle="true" />

    <LinearLayout
        android:id="@+id/fragment_setting_page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f4f4f4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/help_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_update_password"
                    android:textSize="18dp" />
                <!--<View-->
                <!--android:background="@color/grey"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2dp"/>-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_us"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/linearayout_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_reset_password"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clean_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/linearayout_click">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_bind_email"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feed_back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_feed_back"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_feed_update_version"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/common_margin"
                    android:gravity="right" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
